[tool.poetry]
name = "bvapi"
version = "0.1.0"
description = ""
authors = ["Marcio M. <marcio.mendonca@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
connexion = "^2.7.0"
flask-restful = "^0.3.8"
psycopg2 = "^2.8.5"
flask-sqlalchemy = "^2.4.3"
passlib = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pgcli = "^3.0.0"
direnv = "^2020.7.1"
ipython = "^7.16.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
